Fixed campaign card addendum spacing for all devices

--- a/dev/css/component/campaign-card.css
+++ b/dev/css/component/campaign-card.css
@@ -84,6 +84,10 @@
 
 }
 
+.campaign-card .campaign-card-content .campaign-card-addendum p{
+    margin-bottom: 15px;
+}
+
 .campaign-card .campaign-card-content .campaign-card-addendum span{
     font-size: 18px;
     line-height: 22px;
@@ -255,6 +259,10 @@
     .campaign-card .campaign-card-content .campaign-card-addendum{
         padding-top:40px;
         margin-top:40px;
+    }
+
+    .campaign-card .campaign-card-content .campaign-card-addendum p{
+        margin-bottom: 20px;
     }
 
 }
